--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "electron-log": "^2.2.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "update-electron-app": "^1.2.0"
   },
   "devDependencies": {
