--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.2.7",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.1",
     "cross-env": "5.1.6",
     "electron-is-dev": "0.3.0",
     "electron-log": "^2.2.6",
