--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.1.1",
     "cross-env": "5.1.6",
     "electron-is-dev": "0.3.0",
+    "electron-json-storage": "^4.1.6",
     "electron-log": "^2.2.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
