--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.1.1",
+    "axios": "^0.19.0",
     "cross-env": "5.1.6",
     "electron-is-dev": "0.3.0",
     "electron-json-storage": "^4.1.6",
